Migrate switch statements to Java 17